--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
       <img src="mafia.jpeg" alt="Mafia">
       <h2>MAFIA</h2>
       <p>Mundo aberto imersivo.</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://store.steampowered.com/app/1030840/Mafia_Definitive_Edition/">COMPRAR</a>
     </div>
     <div class="produto">
       <img src="red.jpeg" alt="Red Dead 2">
       <h2>Red Dead 2</h2>
       <p>70% OFF Steam</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/?l=brazilian&curator_clanid=35980299">COMPRAR</a>
     </div>
     <div class="produto">
       <img src="max.jpg" alt="Max Payne 3">
       <h2>Max Payne 3</h2>
       <p>Max no Brasil</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://brjogostorrent.net/max-payne-3-torrent-complete-edition-pt-br-pc-download">COMPRAR</a>
     </div>
     <div class="produto">
       <img src="sile.jpg" alt="Silent Hill 2">
       <h2>Silent Hill 2</h2>
       <p>Antigo e aterrorizante</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://brjogostorrent.net/silent-hill-2-torrent-directors-cut-pt-br-pc-download">COMPRAR</a>
     </div>
   </div>
 
@@ -181,25 +181,25 @@
       <img src="pri.jpeg" alt="Prime Gaming">
       <h2>Prime Gaming</h2>
       <p>Resgate seus jogos grátis</p>
-      <a href="#">ACESSAR</a>
+      <a href="https://gaming.amazon.com/home">ACESSAR</a>
     </div>
     <div class="produto">
       <img src="afg.jpeg" alt="GOG">
       <h2>GOG</h2>
       <p>Jogos clássicos e atuais</p>
-      <a href="#">ACESSAR</a>
+      <a href="https://www.gog.com/">ACESSAR</a>
     </div>
     <div class="produto">
       <img src="epi.jpeg" alt="Epic Games">
       <h2>Epic Games</h2>
       <p>Jogos gratuitos toda semana</p>
-      <a href="#">ACESSAR</a>
+      <a href="https://store.epicgames.com/pt-BR/">ACESSAR</a>
     </div>
     <div class="produto">
       <img src="ss.jpeg" alt="Steam">
       <h2>Steam Promos</h2>
       <p>Ofertas imperdíveis</p>
-      <a href="#">ACESSAR</a>
+      <a href="https://store.steampowered.com/specials#tab=TopSellers">ACESSAR</a>
     </div>
   </div>
 
@@ -210,25 +210,25 @@
       <img src="gh.jpeg" alt="Controle Xbox">
       <h2>Controle Xbox</h2>
       <p>Apenas R$390 na Amazon</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://www.kabum.com.br/produto/520843/controle-microsoft-xbox-dourado-preto-sem-fio-para-xbox-series-x-e-s">COMPRAR</a>
     </div>
     <div class="produto">
       <img src="aly.jpeg" alt="Xbox Ally">
       <h2>Xbox Ally</h2>
       <p>Pré-venda disponível</p>
-      <a href="#">GARANTIR</a>
+      <a href="https://www.xbox.com/en-US/handhelds/rog-xbox-ally">GARANTIR</a>
     </div>
     <div class="produto">
       <img src="po.jpeg" alt="Controle sem fio">
       <h2>Controle sem fio</h2>
-      <p>Por apenas R$40</p>
-      <a href="#">COMPRAR</a>
+      <p>Por apenas R$64,00</p>
+      <a href="https://shopee.com.br/product/1258151997/23298199560?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkWHlFU0hvQlZFVENpb1FnT09uNDlDS1FwUWZuZ3pJNVViOU9ReHRKK0kxV2hzNXFrUU5KS3VORTNYQzB1bktVUTA4RnZoOU5QZTJTek5admhRTEFUNGFKSGZqa2hlWWR4a3k2NUtjcWdYaStJNFdobjRXK3cyQ2ErWFlHcXZpVE53PT0">COMPRAR</a>
     </div>
     <div class="produto">
       <img src="alive.jpeg" alt="Asus Vivobook">
       <h2>Asus Vivobook 15 Go</h2>
       <p>R$2.500 na Amazon</p>
-      <a href="#">COMPRAR</a>
+      <a href="https://www.amazon.com.br/Notebook-ASUS-VivoBook-RYZEN-KeepOS/dp/B0CYVVRSSZ?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&psc=1&smid=A1ZZFT5FULY4LN">COMPRAR</a>
     </div>
   </div>
 
@@ -239,13 +239,13 @@
       <img src="nb.jpeg" alt="NextBlog">
       <h2>NEXTBLOG</h2>
       <p>O início do blog mais formal da internet</p>
-      <a href="#">VER</a>
+      <a href="NEXTBLOG.html">VER</a>
     </div>
     <div class="produto">
       <img src="lç.png" alt="Next Game Store">
       <h2>NEXT GAME STORE</h2>
       <p>Todos os jogos gratuitos, muitos via Utorrent</p>
-      <a href="#">ENTRAR</a>
+      <a href="mm.html">ENTRAR</a>
     </div>
   
     
