--- a/index.html
+++ b/index.html
@@ -154,18 +154,54 @@
       <p>Mundo aberto imersivo.</p>
       <a href="https://store.steampowered.com/app/1030840/Mafia_Definitive_Edition/">COMPRAR</a>
     </div>
+
+ </div>
+    <div class="produto">
+      <img src="ui.jpeg" alt="Produto 2" />
+      <h2>Dead by Daylight</h2>
+      <p>Terror da semana.</p>
+      <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/" target="_blank">COMPRAR</a>
+    </div>
+    <div class="produto">
+      <img src="b.jpeg" alt="Produto 3" />
+      <h2>Battlefield™ 2042</h2>
+      <p>horrível + barato.</p>
+      <a href="https://store.steampowered.com/app/1517290/Battlefield_2042/" target="_blank">COMPRAR</a>
+    </div>
+
+
+
     <div class="produto">
       <img src="red.jpeg" alt="Red Dead 2">
       <h2>Red Dead 2</h2>
       <p>70% OFF Steam</p>
       <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/?l=brazilian&curator_clanid=35980299">COMPRAR</a>
     </div>
+   
+   <h2 style="text-align: center;margin-top: 20px;"> PIRATAS A BORDO</h2>
+   
     <div class="produto">
       <img src="max.jpg" alt="Max Payne 3">
       <h2>Max Payne 3</h2>
       <p>Max no Brasil</p>
       <a href="https://brjogostorrent.net/max-payne-3-torrent-complete-edition-pt-br-pc-download">COMPRAR</a>
+   
+    <div class="container">
+    <div class="produto">
+      <img src="rune.webp" alt="produto 9" />
+      <h2>Deltarun</h2> 
+      <p>De Toby fox</p>
+      <a href="https://www.mediafire.com/file/yk2mm4gsqlfum91" target="_blank">BAIXAR</a>
     </div>
+    <div class="produto">
+      <img src="nw.jpeg" alt="Produto 10" />
+      <h2>Fallout NV</h2>
+      <p>com uttorent</p>
+      <a href="magnet:?xt=urn:btih:AB17BE3C8B7FA88B3AF13E9C4FF7200B98525F3C" target="_blank">COMPRAR</a>
+    </div>
+   
+   
+  </div>
     <div class="produto">
       <img src="sile.jpg" alt="Silent Hill 2">
       <h2>Silent Hill 2</h2>
