--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <a href="https://store.steampowered.com/app/1517290/Battlefield_2042/" target="_blank">COMPRAR</a>
     </div>
 
-
+  </div>
 
     <div class="produto">
       <img src="red.jpeg" alt="Red Dead 2">
@@ -236,7 +236,7 @@
       <p>Ofertas imperdíveis</p>
       <a href="https://store.steampowered.com/specials#tab=TopSellers">ACESSAR</a>
     </div>
-  
+  </div>
   <!-- 🛍️ TERCEIRA PRATELEIRA - PRODUTOS -->
   <h2 style="text-align:center; margin-top:20px;">Produtos e Periféricos</h2>
   <div class="container">
