--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -95,7 +95,7 @@
       margin-top: 40px;
     }
 
-    /* 🌙 TEMA ESCURO */
+    /* Tema escuro */
     body.dark-mode {
       background-color: #121212;
       color: #e0e0e0;
@@ -139,185 +139,186 @@
 
 <body>
 
-  <!-- 🔥 CABEÇALHO -->
-  <header>
-    <h1>NEXGROUP BETA V1</h1>
-    <button id="toggle-theme">🌙</button>
-  </header>
+<!-- Cabeçalho -->
+<header>
+  <h1>NEXGROUP BETA V1</h1>
+  <button id="toggle-theme">🌙</button>
+</header>
 
-  <!-- 🎮 PRIMEIRA PRATELEIRA - JOGOS -->
-  <h2 style="text-align:center; margin-top:20px;">Jogos em destaque</h2>
-  <div class="container">
-    <div class="produto">
-      <img src="mafia.jpeg" alt="Mafia">
-      <h2>MAFIA</h2>
-      <p>Mundo aberto imersivo.</p>
-      <a href="https://store.steampowered.com/app/1030840/Mafia_Definitive_Edition/">COMPRAR</a>
-    </div>
-
- 
-    <div class="produto">
-      <img src="ui.jpeg" alt="Produto 2" />
-      <h2>Dead by Daylight</h2>
-      <p>Terror da semana.</p>
-      <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/" target="_blank">COMPRAR</a>
-    </div>
-
-    <div class="produto">
-      <img src="b.jpeg" alt="Produto 3" />
-      <h2>Battlefield™ 2042</h2>
-      <p>horrível + barato.</p>
-      <a href="https://store.steampowered.com/app/1517290/Battlefield_2042/" target="_blank">COMPRAR</a>
-    </div>
-
-
-    <div class="produto">
-      <img src="red.jpeg" alt="Red Dead 2">
-      <h2>Red Dead 2</h2>
-      <p>70% OFF Steam</p>
-      <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/?l=brazilian&curator_clanid=35980299">COMPRAR</a>
-    </div>
-  </div>
-   <h2 style="text-align: center;margin-top: 20px;"> PIRATAS A BORDO</h2>
-   
-    <div class="produto">
-      <img src="max.jpg" alt="Max Payne 3">
-      <h2>Max Payne 3</h2>
-      <p>Max no Brasil</p>
-      <a href="https://brjogostorrent.net/max-payne-3-torrent-complete-edition-pt-br-pc-download">COMPRAR</a>
-    </div>
-    <div class="container">
-    <div class="produto">
-      <img src="rune.webp" alt="produto 9" />
-      <h2>Deltarun</h2> 
-      <p>De Toby fox</p>
-      <a href="https://www.mediafire.com/file/yk2mm4gsqlfum91" target="_blank">BAIXAR</a>
-    </div>
-    <div class="produto">
-      <img src="nw.jpeg" alt="Produto 10" />
-      <h2>Fallout NV</h2>
-      <p>com uttorent</p>
-      <a href="magnet:?xt=urn:btih:AB17BE3C8B7FA88B3AF13E9C4FF7200B98525F3C" target="_blank">COMPRAR</a>
-    </div>
-   
-   
-    <div class="produto">
-      <img src="sile.jpg" alt="Silent Hill 2">
-      <h2>Silent Hill 2</h2>
-      <p>Antigo e aterrorizante</p>
-      <a href="https://brjogostorrent.net/silent-hill-2-torrent-directors-cut-pt-br-pc-download">COMPRAR</a>
-    </div>
+<!-- Prateleira: Jogos -->
+<h2 style="text-align:center; margin-top:20px;">Jogos em destaque</h2>
+<div class="container">
+  <div class="produto">
+    <img src="mafia.jpeg" alt="Mafia">
+    <h2>MAFIA</h2>
+    <p>Mundo aberto imersivo.</p>
+    <a href="https://store.steampowered.com/app/1030840/Mafia_Definitive_Edition/">COMPRAR</a>
   </div>
 
-  <!-- 🌟 SEGUNDA PRATELEIRA - PLATAFORMAS -->
-  <h2 style="text-align:center; margin-top:20px;">As melhores plataformas</h2>
-  <div class="container">
-    <div class="produto">
-      <img src="pri.jpeg" alt="Prime Gaming">
-      <h2>Prime Gaming</h2>
-      <p>Resgate seus jogos grátis</p>
-      <a href="https://gaming.amazon.com/home">ACESSAR</a>
-    </div>
-    <div class="produto">
-      <img src="afg.jpeg" alt="GOG">
-      <h2>GOG</h2>
-      <p>Jogos clássicos e atuais</p>
-      <a href="https://www.gog.com/">ACESSAR</a>
-    </div>
-    <div class="produto">
-      <img src="epi.jpeg" alt="Epic Games">
-      <h2>Epic Games</h2>
-      <p>Jogos gratuitos toda semana</p>
-      <a href="https://store.epicgames.com/pt-BR/">ACESSAR</a>
-    </div>
-    <div class="produto">
-      <img src="ss.jpeg" alt="Steam">
-      <h2>Steam Promos</h2>
-      <p>Ofertas imperdíveis</p>
-      <a href="https://store.steampowered.com/specials#tab=TopSellers">ACESSAR</a>
-    </div>
-  </div>
-  <!-- 🛍️ TERCEIRA PRATELEIRA - PRODUTOS -->
-  <h2 style="text-align:center; margin-top:20px;">Produtos e Periféricos</h2>
-  <div class="container">
-    <div class="produto">
-      <img src="gh.jpeg" alt="Controle Xbox">
-      <h2>Controle Xbox</h2>
-      <p>Apenas R$390 na Amazon</p>
-      <a href="https://www.kabum.com.br/produto/520843/controle-microsoft-xbox-dourado-preto-sem-fio-para-xbox-series-x-e-s">COMPRAR</a>
-    </div>
-    <div class="produto">
-      <img src="aly.jpeg" alt="Xbox Ally">
-      <h2>Xbox Ally</h2>
-      <p>Pré-venda disponível</p>
-      <a href="https://www.xbox.com/en-US/handhelds/rog-xbox-ally">GARANTIR</a>
-    </div>
-    <div class="produto">
-      <img src="po.jpeg" alt="Controle sem fio">
-      <h2>Controle sem fio</h2>
-      <p>Por apenas R$64,00</p>
-      <a href="https://shopee.com.br/product/1258151997/23298199560?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkWHlFU0hvQlZFVENpb1FnT09uNDlDS1FwUWZuZ3pJNVViOU9ReHRKK0kxV2hzNXFrUU5KS3VORTNYQzB1bktVUTA4RnZoOU5QZTJTek5admhRTEFUNGFKSGZqa2hlWWR4a3k2NUtjcWdYaStJNFdobjRXK3cyQ2ErWFlHcXZpVE53PT0">COMPRAR</a>
-    </div>
-    <div class="produto">
-      <img src="alive.jpeg" alt="Asus Vivobook">
-      <h2>Asus Vivobook 15 Go</h2>
-      <p>R$2.500 na Amazon</p>
-      <a href="https://www.amazon.com.br/Notebook-ASUS-VivoBook-RYZEN-KeepOS/dp/B0CYVVRSSZ?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&psc=1&smid=A1ZZFT5FULY4LN">COMPRAR</a>
-    </div>
+  <div class="produto">
+    <img src="ui.jpeg" alt="Dead by Daylight">
+    <h2>Dead by Daylight</h2>
+    <p>Terror da semana.</p>
+    <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/" target="_blank">COMPRAR</a>
   </div>
 
-  <!-- 🌐 QUARTA PRATELEIRA - GRUPO -->
-  <h2 style="text-align:center; margin-top:20px;">NEXTGROUP</h2>
-  <div class="container">
-    <div class="produto">
-      <img src="nb.jpeg" alt="NextBlog">
-      <h2>NEXTBLOG</h2>
-      <p>O início do blog mais formal da internet</p>
-      <a href="NEXTBLOG.html">VER</a>
-    </div>
-    <div class="produto">
-      <img src="lç.png" alt="Next Game Store">
-      <h2>NEXT GAME STORE</h2>
-      <p>Todos os jogos gratuitos, muitos via Utorrent</p>
-      <a href="mm.html">ENTRAR</a>
-    </div>
-  
-    
-      <div class="produto">
-      <img src="nbg.jpeg" atl="produto 19" />
-      <h2>NEXTPROMOS</h2>
-      <p>Acesse a promos separada por editores next</p>
-      <a href="promo.html" target="_blank">ABRIR</a>
-      </div>
+  <div class="produto">
+    <img src="b.jpeg" alt="Battlefield 2042">
+    <h2>Battlefield™ 2042</h2>
+    <p>horrível + barato.</p>
+    <a href="https://store.steampowered.com/app/1517290/Battlefield_2042/" target="_blank">COMPRAR</a>
+  </div>
 
-      <div class="produto">
-      <img src="NUU.png" alt="produto" />
-      <h2>nuuvem</h2>
-      <p>RECOMENDADO</p>
-      <a href="https://www.nuuvem.com/br-pt/" target="_blank">VÁ</a>
-      </div>
-
-
-
-
+  <div class="produto">
+    <img src="red.jpeg" alt="Red Dead 2">
+    <h2>Red Dead 2</h2>
+    <p>70% OFF Steam</p>
+    <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/?l=brazilian&curator_clanid=35980299">COMPRAR</a>
+  </div>
 </div>
 
+<h2 style="text-align:center; margin-top:20px;">PIRATAS A BORDO</h2>
+<div class="container">
+  <div class="produto">
+    <img src="max.jpg" alt="Max Payne 3">
+    <h2>Max Payne 3</h2>
+    <p>Max no Brasil</p>
+    <a href="https://brjogostorrent.net/max-payne-3-torrent-complete-edition-pt-br-pc-download">COMPRAR</a>
+  </div>
 
+  <div class="produto">
+    <img src="rune.webp" alt="Deltarun">
+    <h2>Deltarun</h2> 
+    <p>De Toby fox</p>
+    <a href="https://www.mediafire.com/file/yk2mm4gsqlfum91" target="_blank">BAIXAR</a>
+  </div>
 
-  <!-- 🔥 RODAPÉ -->
-  <footer>
-    <p>&copy; NEXTIME GROUP BR.</p>
-    <p>Contato: kleberluacssilva@53.gmail.com | Instagram: @EM BREVE</p>
-  </footer>
+  <div class="produto">
+    <img src="nw.jpeg" alt="Fallout NV">
+    <h2>Fallout NV</h2>
+    <p>com uttorent</p>
+    <a href="magnet:?xt=urn:btih:AB17BE3C8B7FA88B3AF13E9C4FF7200B98525F3C" target="_blank">COMPRAR</a>
+  </div>
 
-  <!-- 🌙 SCRIPT DO TEMA -->
-  <script>
-    const toggleBtn = document.getElementById('toggle-theme');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-      toggleBtn.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
-    });
-  </script>
+  <div class="produto">
+    <img src="sile.jpg" alt="Silent Hill 2">
+    <h2>Silent Hill 2</h2>
+    <p>Antigo e aterrorizante</p>
+    <a href="https://brjogostorrent.net/silent-hill-2-torrent-directors-cut-pt-br-pc-download">COMPRAR</a>
+  </div>
+</div>
+
+<!-- Prateleira: Plataformas -->
+<h2 style="text-align:center; margin-top:20px;">As melhores plataformas</h2>
+<div class="container">
+  <div class="produto">
+    <img src="pri.jpeg" alt="Prime Gaming">
+    <h2>Prime Gaming</h2>
+    <p>Resgate seus jogos grátis</p>
+    <a href="https://gaming.amazon.com/home">ACESSAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="afg.jpeg" alt="GOG">
+    <h2>GOG</h2>
+    <p>Jogos clássicos e atuais</p>
+    <a href="https://www.gog.com/">ACESSAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="epi.jpeg" alt="Epic Games">
+    <h2>Epic Games</h2>
+    <p>Jogos gratuitos toda semana</p>
+    <a href="https://store.epicgames.com/pt-BR/">ACESSAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="ss.jpeg" alt="Steam">
+    <h2>Steam Promos</h2>
+    <p>Ofertas imperdíveis</p>
+    <a href="https://store.steampowered.com/specials#tab=TopSellers">ACESSAR</a>
+  </div>
+</div>
+
+<!-- Prateleira: Produtos e Periféricos -->
+<h2 style="text-align:center; margin-top:20px;">Produtos e Periféricos</h2>
+<div class="container">
+  <div class="produto">
+    <img src="gh.jpeg" alt="Controle Xbox">
+    <h2>Controle Xbox</h2>
+    <p>Apenas R$390 na Amazon</p>
+    <a href="https://www.kabum.com.br/produto/520843/controle-microsoft-xbox-dourado-preto-sem-fio-para-xbox-series-x-e-s">COMPRAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="aly.jpeg" alt="Xbox Ally">
+    <h2>Xbox Ally</h2>
+    <p>Pré-venda disponível</p>
+    <a href="https://www.xbox.com/en-US/handhelds/rog-xbox-ally">GARANTIR</a>
+  </div>
+
+  <div class="produto">
+    <img src="po.jpeg" alt="Controle sem fio">
+    <h2>Controle sem fio</h2>
+    <p>Por apenas R$64,00</p>
+    <a href="https://shopee.com.br/product/1258151997/23298199560">COMPRAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="alive.jpeg" alt="Asus Vivobook">
+    <h2>Asus Vivobook 15 Go</h2>
+    <p>R$2.500 na Amazon</p>
+    <a href="https://www.amazon.com.br/Notebook-ASUS-VivoBook-RYZEN-KeepOS/dp/B0CYVVRSSZ">COMPRAR</a>
+  </div>
+</div>
+
+<!-- Prateleira: Grupo -->
+<h2 style="text-align:center; margin-top:20px;">NEXTGROUP</h2>
+<div class="container">
+  <div class="produto">
+    <img src="nb.jpeg" alt="NextBlog">
+    <h2>NEXTBLOG</h2>
+    <p>O início do blog mais formal da internet</p>
+    <a href="NEXTBLOG.html">VER</a>
+  </div>
+
+  <div class="produto">
+    <img src="lç.png" alt="Next Game Store">
+    <h2>NEXT GAME STORE</h2>
+    <p>Todos os jogos gratuitos, muitos via Utorrent</p>
+    <a href="mm.html">ENTRAR</a>
+  </div>
+
+  <div class="produto">
+    <img src="nbg.jpeg" alt="NEXTPROMOS">
+    <h2>NEXTPROMOS</h2>
+    <p>Acesse a promos separada por editores next</p>
+    <a href="promo.html" target="_blank">ABRIR</a>
+  </div>
+
+  <div class="produto">
+    <img src="NUU.png" alt="Nuuvem">
+    <h2>Nuuvem</h2>
+    <p>RECOMENDADO</p>
+    <a href="https://www.nuuvem.com/br-pt/" target="_blank">VÁ</a>
+  </div>
+</div>
+
+<!-- Rodapé -->
+<footer>
+  <p>&copy; NEXTIME GROUP BR.</p>
+  <p>Contato: kleberluacssilva@53.gmail.com | Instagram: @EM BREVE</p>
+</footer>
+
+<!-- Script Tema Escuro -->
+<script>
+  const toggleBtn = document.getElementById('toggle-theme');
+  toggleBtn.addEventListener('click', () => {
+    document.body.classList.toggle('dark-mode');
+    toggleBtn.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
+  });
+</script>
 
 </body>
 </html>
+
