--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
   <div class="produto">
     <img src="rune.webp" alt="Deltarun">
     <h2>Deltarun</h2> 
-    <p>De Toby fox</p>
+    <p>De Toby Fox</p>
     <a href="https://www.mediafire.com/file/yk2mm4gsqlfum91" target="_blank">BAIXAR</a>
   </div>
 
   <div class="produto">
     <img src="nw.jpeg" alt="Fallout NV">
     <h2>Fallout NV</h2>
-    <p>com uttorent</p>
+    <p>Com Utorrent</p>
     <a href="magnet:?xt=urn:btih:AB17BE3C8B7FA88B3AF13E9C4FF7200B98525F3C" target="_blank">COMPRAR</a>
   </div>
 
@@ -207,6 +207,7 @@
     <a href="https://brjogostorrent.net/silent-hill-2-torrent-directors-cut-pt-br-pc-download">COMPRAR</a>
   </div>
 </div>
+
 
 <!-- Prateleira: Plataformas -->
 <h2 style="text-align:center; margin-top:20px;">As melhores plataformas</h2>
