--- a/promo.html
+++ b/promo.html
@@ -143,7 +143,7 @@
 <body>
 
   <nav>
-    <div class="logo">NEXTIME</div>
+    <div class="logo">NEXTPROMO</div>
     <ul>
       <li>Home</li>
       <li>Produtos</li>
@@ -155,17 +155,17 @@
   <section class="produtos-container">
     <div class="produto">
       <img src="ps5.jpeg" alt="Produto 1" />
-      <h3>XBOX SERIES S</h3>
+      <h3>Playstation 5</h3>
       <p class="preco">R$ 3,500</p>
-      <p>512gb+gamepass</p>
+      <p>Sujeito a variação/p>
       <p>O preço pode variar</p>
       <a href="https://www.kabum.com.br/produto/542929/console-playstation-5-slim-sony-ssd-1tb-edicao-digital-com-controle-sem-fio-dualsense-branco-2-jogos-digitais-1000038914?srsltid=AfmBOoot7Siy4V1xq3yA2R2xmomVjTmRWsQmRd2ZkJm9C6KhuKDm56krSyo"target="_blank">CONFERIR</a>
     </div>
     <div class="produto">
       <img src="box.jpeg" alt="Produto 2" />
-      <h3>Produto 2</h3>
+      <h3>XBOX SRIES S</h3>
       <p class="preco">R$ </p>
-      <p>Sujeito a variação</p>
+      <p>512gb+gamepass</p>
       <a href=""target="_blank">CONFERIR</a>
     </div>
     <div class="produto">
@@ -196,12 +196,41 @@
       <P>-22%</P>
       <p> encontrado a 6K</p>
       <a href="https://www.kabum.com.br/produto/564916/notebook-gamer-acer-nitro-v15-intel-core-i5-13420h-8gb-ram-geforce-rtx-3050-ssd-512gb-15-6-fhd-ips-144hz-windows-11-preto-anv15-51-58az" target="_blank">KABUM</a>
-    </div>
-  </section>
+  </div>
+  
+  <div class="produto">
+  <imh src="hh" atl="produto 7" />
+  <h3>P</h3>
+  <p class="preco">X</p>
+  <P></P>
+  <a href="h" target="_blank">COMPRAR</a>
+</div>
+
+<div class="produto">
+<img src="h" alt="produto8" />
+<h3></h3>
+<P class="preco">X</P>
+<p></p>
+<a href=""target="_blank">COMPRAR</a>
+</div>
+
+</div>
+
+
+
+
+  </div>
+
+
+
+
+
+
+</section>
 
   <footer>
     <div class="footer-logo">NEXTIME</div>
-    <p>© 2025 NEXTIME Group. Todos os direitos reservados.</p>
+    <p>TESTE</p>
     <p>Contato: <a href="mailto:contato@nextime.com.br">contato@nextime.com.br</a> | Instagram: <a href="https://instagram.com/nextime" target="_blank">@nextime</a></p>
   </footer>
 
