--- a/promo.html
+++ b/promo.html
@@ -158,7 +158,7 @@
       <h3>Playstation 5</h3>
       <p class="preco">R$ 3,500</p>
       <p>Sujeito a variação/p>
-      <p>O preço pode variar</p>
+      <p>preço pode variar</p>
       <a href="https://www.kabum.com.br/produto/542929/console-playstation-5-slim-sony-ssd-1tb-edicao-digital-com-controle-sem-fio-dualsense-branco-2-jogos-digitais-1000038914?srsltid=AfmBOoot7Siy4V1xq3yA2R2xmomVjTmRWsQmRd2ZkJm9C6KhuKDm56krSyo"target="_blank">CONFERIR</a>
     </div>
     <div class="produto">
