--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 <div class="container">
   <div class="produto">
     <img src="pri.jpeg" alt="Prime Gaming">
-    <h2>Prime Gaming</h2>
-    <p>Resgate seus jogos grátis</p>
+    <h2>PRIME GAMING</h2>
+    <p>RESGATE OS </p>
     <a href="https://gaming.amazon.com/home">ACESSAR</a>
   </div>
 
@@ -227,10 +227,10 @@
   </div>
 
   <div class="produto">
-    <img src="epi.jpeg" alt="Epic Games">
-    <h2>Epic Games</h2>
-    <p>Jogos gratuitos toda semana</p>
-    <a href="https://store.epicgames.com/pt-BR/">ACESSAR</a>
+    <img src="IMG_0087.jpeg" alt="utorrent">
+    <h2>Utorrent</h2>
+    <p>PARA VCS BAIXAR OS PIRATEX</p></p>
+    <a heref="https://www.utorrent.com/intl/pt_br/desktop/compare/">ACESSAR</a>
   </div>
 
   <div class="produto">
