--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <img src="IMG_0087.jpeg" alt="utorrent">
     <h2>Utorrent</h2>
     <p>PARA VCS BAIXAR OS PIRATEX</p></p>
-    <a heref="https://www.utorrent.com/intl/pt_br/desktop/compare/">ACESSAR</a>
+    <a heref="https://www.utorrent.com/intl/pt_br/">ACESSAR</a>
   </div>
 
   <div class="produto">
