--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
   </div>
 
   <div class="produto">
-    <img src="sile.jpg" alt="Silent Hill 2">
-    <h2>Silent Hill 2</h2>
-    <p>Antigo e aterrorizante</p>
-    <a href="https://brjogostorrent.net/silent-hill-2-torrent-directors-cut-pt-br-pc-download">COMPRAR</a>
+    <img src="lain.jpeg" alt=" wor at war">
+    <h2>Word at war</h2> 
+    <p>Eu disse que era incrivel</p>
+    <a href="magnet:?xt=urn:btih:498fe29cde1018a2f6e94233e8af617c542647a8&dn=Call+Of+Duty+World+At+War+repack+Mr+DJ">Baixar</a>
   </div>
 </div>
 
