--- a/index.html
+++ b/index.html
@@ -1,324 +1,94 @@
- <!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NEXGROUP</title>
+  <title>KYEezy</title>
+
+  <!-- Fonte estilo Yeezy -->
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      color: #000;
+      font-family: 'Archivo Black', sans-serif;
+      background: #fff;
+      color: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
       margin: 0;
-      padding: 0;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    header {
-      background-color: #383c68;
-      color: white;
-      padding: 30px;
-      text-align: center;
-      position: relative;
-    }
-
-    header h1 {
-      margin: 0;
-    }
-
-    #toggle-theme {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 5px;
-      background-color: #ffffff30;
-      color: white;
-      cursor: pointer;
-      font-size: 16px;
+      padding: 20px;
+      flex-direction: column;
     }
 
     .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 20px;
-      gap: 20px;
-    }
-
-    .produto {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      width: 250px;
+      width: 100%;
+      max-width: 500px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: background-color 0.3s, color 0.3s;
+      flex: 1;
     }
 
-    .produto img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 4px;
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 40px;
+      letter-spacing: 2px;
+      color: #111;
     }
 
-    .produto h2 {
-      font-size: 18px;
-      margin: 10px 0;
+    .buttons {
+      display: flex;
+      gap: 15px;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
     }
 
-    .produto p {
-      color: #555;
-    }
-
-    .produto a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 15px;
-      background-color: #28a745;
-      color: white;
+    .buttons a {
+      flex: 1;
+      min-width: 120px;
+      text-align: center;
       text-decoration: none;
-      border-radius: 4px;
+      background: #f2f2f2;
+      padding: 15px;
+      border-radius: 10px;
+      font-weight: bold;
+      color: #111;
+      transition: 0.3s;
+      letter-spacing: 1px;
     }
 
-    .produto a:hover {
-      background-color: #218838;
+    .buttons a:hover {
+      background: #ddd;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #555;
+      margin-top: 10px;
     }
 
     footer {
-      background-color: #383c68;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-
-    /* Tema escuro */
-    body.dark-mode {
-      background-color: #121212;
-      color: #e0e0e0;
-    }
-
-    body.dark-mode header,
-    body.dark-mode footer {
-      background-color: #1f1f3d;
-      color: white;
-    }
-
-    body.dark-mode .produto {
-      background-color: #1e1e1e;
-      border-color: #333;
-      box-shadow: 0 2px 5px rgba(255, 255, 255, 0.05);
-    }
-
-    body.dark-mode .produto p {
-      color: #cccccc;
-    }
-
-    body.dark-mode .produto a {
-      background-color: #28a745;
-      color: white;
-    }
-
-    body.dark-mode .produto a:hover {
-      background-color: #1c7c31;
-    }
-
-    body.dark-mode h1,
-    body.dark-mode h2 {
-      color: white;
-    }
-
-    body.dark-mode #toggle-theme {
-      background-color: #ffffff10;
+      margin-top: 30px;
+      font-size: 0.9rem;
+      color: #999;
     }
   </style>
 </head>
-
 <body>
+  <div class="container">
+    <h1>KYEezy</h1>
 
-<!-- Cabeçalho -->
-<header>
-  <h1>NEXGROUP BETA V1</h1>
-  <button id="toggle-theme">🌙</button>
-</header>
-
-<!-- Prateleira: Jogos -->
-<h2 style="text-align:center; margin-top:20px;">Jogos em destaque</h2>
-<div class="container">
-  <div class="produto">
-    <img src="mafia.jpeg" alt="Mafia">
-    <h2>MAFIA</h2>
-    <p>Mundo aberto imersivo.</p>
-    <a href="https://store.steampowered.com/app/1030840/Mafia_Definitive_Edition/">COMPRAR</a>
+    <div class="buttons">
+      <a href="https://www.ev.org.br" target="_blank">Fundação Bradesco</a>
+      <a href="https://github.com/kleberrrrouidev/beta" target="_blank">My hub</a>
+    </div>
+    
+    <p>Onde aprendi\Projetos</p>
   </div>
 
-  <div class="produto">
-    <img src="ui.jpeg" alt="Dead by Daylight">
-    <h2>Dead by Daylight</h2>
-    <p>Terror da semana.</p>
-    <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/" target="_blank">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="b.jpeg" alt="Battlefield 2042">
-    <h2>Battlefield™ 2042</h2>
-    <p>horrível + barato.</p>
-    <a href="https://store.steampowered.com/app/1517290/Battlefield_2042/" target="_blank">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="red.jpeg" alt="Red Dead 2">
-    <h2>Red Dead 2</h2>
-    <p>70% OFF Steam</p>
-    <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/?l=brazilian&curator_clanid=35980299">COMPRAR</a>
-  </div>
-</div>
-
-<h2 style="text-align:center; margin-top:20px;">PIRATAS A BORDO</h2>
-<div class="container">
-  <div class="produto">
-    <img src="max.jpg" alt="Max Payne 3">
-    <h2>Max Payne 3</h2>
-    <p>Max no Brasil</p>
-    <a href="https://brjogostorrent.net/max-payne-3-torrent-complete-edition-pt-br-pc-download">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="rune.webp" alt="Deltarun">
-    <h2>Deltarun</h2> 
-    <p>De Toby Fox</p>
-    <a href="https://www.mediafire.com/file/yk2mm4gsqlfum91" target="_blank">BAIXAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="nw.jpeg" alt="Fallout NV">
-    <h2>Fallout NV</h2>
-    <p>Com Utorrent</p>
-    <a href="magnet:?xt=urn:btih:AB17BE3C8B7FA88B3AF13E9C4FF7200B98525F3C" target="_blank">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="lain.jpeg" alt=" wor at war">
-    <h2>Word at war</h2> 
-    <p>Eu disse que era incrivel</p>
-    <a href="magnet:?xt=urn:btih:498fe29cde1018a2f6e94233e8af617c542647a8&dn=Call+Of+Duty+World+At+War+repack+Mr+DJ">Baixar</a>
-  </div>
-</div>
-
-
-<!-- Prateleira: Plataformas -->
-<h2 style="text-align:center; margin-top:20px;">As melhores plataformas</h2>
-<div class="container">
-  <div class="produto">
-    <img src="pri.jpeg" alt="Prime Gaming">
-    <h2>PRIME GAMING</h2>
-    <p>RESGATE OS </p>
-    <a href="https://gaming.amazon.com/home">ACESSAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="afg.jpeg" alt="GOG">
-    <h2>GOG</h2>
-    <p>Jogos clássicos e atuais</p>
-    <a href="https://www.gog.com/">ACESSAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="IMG_0087.jpeg" alt="utorrent">
-    <h2>Utorrent</h2>
-    <p>PARA VCS BAIXAR OS PIRATEX</p></p>
-    <a href="https://www.utorrent.com/intl/pt_br/">ACESSAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="ss.jpeg" alt="Steam">
-    <h2>Steam Promos</h2>
-    <p>Ofertas imperdíveis</p>
-    <a href="https://store.steampowered.com/specials#tab=TopSellers">ACESSAR</a>
-  </div>
-</div>
-
-<!-- Prateleira: Produtos e Periféricos -->
-<h2 style="text-align:center; margin-top:20px;">Produtos e Periféricos</h2>
-<div class="container">
-  <div class="produto">
-    <img src="gh.jpeg" alt="Controle Xbox">
-    <h2>Controle Xbox</h2>
-    <p>Apenas R$390 na Amazon</p>
-    <a href="https://www.kabum.com.br/produto/520843/controle-microsoft-xbox-dourado-preto-sem-fio-para-xbox-series-x-e-s">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="aly.jpeg" alt="Xbox Ally">
-    <h2>Xbox Ally</h2>
-    <p>Pré-venda disponível</p>
-    <a href="https://www.xbox.com/en-US/handhelds/rog-xbox-ally">GARANTIR</a>
-  </div>
-
-  <div class="produto">
-    <img src="po.jpeg" alt="Controle sem fio">
-    <h2>Controle sem fio</h2>
-    <p>Por apenas R$64,00</p>
-    <a href="https://shopee.com.br/product/1258151997/23298199560">COMPRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="alive.jpeg" alt="Asus Vivobook">
-    <h2>Asus Vivobook 15 Go</h2>
-    <p>R$2.500 na Amazon</p>
-    <a href="https://www.amazon.com.br/Notebook-ASUS-VivoBook-RYZEN-KeepOS/dp/B0CYVVRSSZ">COMPRAR</a>
-  </div>
-</div>
-
-<!-- Prateleira: Grupo -->
-<h2 style="text-align:center; margin-top:20px;">NEXTGROUP</h2>
-<div class="container">
-  <div class="produto">
-    <img src="nb.jpeg" alt="NextBlog">
-    <h2>NEXTBLOG</h2>
-    <p>O início do blog mais formal da internet</p>
-    <a href="NEXTBLOG.html">VER</a>
-  </div>
-
-  <div class="produto">
-    <img src="lç.png" alt="Next Game Store">
-    <h2>NEXT GAME STORE</h2>
-    <p>Todos os jogos gratuitos, muitos via Utorrent</p>
-    <a href="mm.html">ENTRAR</a>
-  </div>
-
-  <div class="produto">
-    <img src="nbg.jpeg" alt="NEXTPROMOS">
-    <h2>NEXTPROMOS</h2>
-    <p>Acesse a promos separada por editores next</p>
-    <a href="promo.html" target="_blank">ABRIR</a>
-  </div>
-
-  <div class="produto">
-    <img src="NUU.png" alt="Nuuvem">
-    <h2>Nuuvem</h2>
-    <p>RECOMENDADO</p>
-    <a href="https://www.nuuvem.com/br-pt/" target="_blank">VÁ</a>
-  </div>
-</div>
-
-<!-- Rodapé -->
-<footer>
-  <p>&copy; NEXTIME GROUP BR.</p>
-  <p>Contato: kleberluacssilva@53.gmail.com | Instagram: @EM BREVE</p>
-</footer>
-
-<!-- Script Tema Escuro -->
-<script>
-  const toggleBtn = document.getElementById('toggle-theme');
-  toggleBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    toggleBtn.textContent = document.body.classList.contains('dark-mode') ? '☀️' : '🌙';
-  });
-</script>
-
+  <footer>
+    Geralmente não vou de uniforme 
+  </footer>
 </body>
 </html>
